--- a/front/src/App.css
+++ b/front/src/App.css
@@ -51,3 +51,43 @@ blockquote h4:after {
     font-size: 36px;
     color: #9a9a9a50;
 }
+
+.emotionIndicator {
+    text-align:center;
+    white-space:nowrap;
+    g-origin:50% 50%;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+    transform-origin: 50% 50%;
+}
+.emotionIndicator p {
+    margin:0 -100% ;
+    display:inline-block;
+}
+.emotionIndicator p:before{
+    content:'';
+    width:0;
+    padding-top:110%;/* takes width as reference, + 10% for faking some extra padding */
+    display:inline-block;
+    vertical-align:middle;
+}
+.wrapper {
+    width: 500px;
+}
+.progress-bar {
+    width: 100%;
+    background-color: white;
+    padding: 3px;
+    border-radius: 3px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+}
+.progress-bar-fill {
+    display: block;
+    height: 8px;
+    background-color: #659cef;
+    border-radius: 3px;
+    transition: width 500ms ease-in-out;
+}
